--- a/[ПРАКТИЧЕСКАЯ] Наследование классов/1.ipynb
+++ b/[ПРАКТИЧЕСКАЯ] Наследование классов/1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,17 +107,23 @@
     "            print(\"Нет дома чтобы изменить у него цвет\")\n",
     "\n",
     "    def increase_house_price(self, count: int):\n",
-    "        self.house_price += count\n",
-    "        print(\"Стоимость дома повысилась на\", count, \"и сейчас она равна\", self.house_price)\n",
+    "        if (self.has_home):\n",
+    "            self.house_price += count\n",
+    "            print(\"Стоимость дома повысилась на\", count, \"и сейчас она равна\", self.house_price)\n",
+    "        else:\n",
+    "            print(\"Нет дома чтобы повысить его цену\")\n",
     "\n",
     "    def reduce_house_price(self, count: int):\n",
-    "        self.house_price -= count\n",
-    "        print(\"Стоимость дома понизилась на\", count, \"и сейчас она равна\", self.house_price)"
+    "        if (self.has_home):\n",
+    "            self.house_price -= count\n",
+    "            print(\"Стоимость дома понизилась на\", count, \"и сейчас она равна\", self.house_price)\n",
+    "        else:\n",
+    "            print(\"Нет дома чтобы понизить его цену\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,10 +133,11 @@
       "Броня увеличена на 10 и сейчас она равна 20\n",
       "Броня уменьшена на 5 и сейчас она равна 5\n",
       "Оружие куплено\n",
+      "Оружие продано\n",
       "Уже есть дом\n",
       "Цвет дома изменен на желтый\n",
       "Нет дома чтобы изменить у него цвет\n",
-      "Стоимость дома повысилась на 15000 и сейчас она равна 25000\n"
+      "Нет дома\n"
      ]
     }
    ],
@@ -152,7 +159,7 @@
     "thief_2.buy_home()\n",
     "thief_2.change_color_home(\"желтый\")\n",
     "thief_1.change_color_home(\"красный\")\n",
-    "thief_1.increase_house_price(15000)\n"
+    "thief_1.increase_house_price(15000)"
    ]
   }
  ],
