--- a/[ПРАКТИЧЕСКАЯ] Матрицы/1.ipynb
+++ b/[ПРАКТИЧЕСКАЯ] Матрицы/1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
     "        return new_matrix\n",
     "\n",
     "    def __matmul__(self, other):\n",
-    "        result = []\n",
+    "        new_matrix = []\n",
     "        for i in range(len(self.matrix)):\n",
     "            row = []\n",
     "            for j in range(len(other.matrix[0])):\n",
@@ -101,8 +101,8 @@
     "                for k in range(len(other.matrix)):\n",
     "                    element += self.matrix[i][k] * other.matrix[k][j]\n",
     "                row.append(element)\n",
-    "            result.append(row)\n",
-    "        return result\n",
+    "            new_matrix.append(row)\n",
+    "        return new_matrix\n",
     "\n",
     "    def __str__(self):\n",
     "        return f\"{self.matrix}\""
@@ -110,47 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[21  8]\n",
-      " [40 29]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "np_matrix1 = np.array([[1, 2],\n",
-    "                       [10, 3]])\n",
-    "\n",
-    "np_matrix2 = np.array([[1, 2],\n",
-    "                       [10, 3]])\n",
-    "\n",
-    "print(np.matmul(np_matrix1, np_matrix2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Cell magic `%%ipytest` not found.\n"
+      "\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                                                                                   [100%]\u001b[0m\n",
+      "\u001b[32m\u001b[32m\u001b[1m10 passed\u001b[0m\u001b[32m in 0.03s\u001b[0m\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "%%ipytest\n",
-    "import numpy as np\n",
-    "\n",
     "\n",
     "matrix1 = Matrix([[1, 2],\n",
     "                     [10, 3]])\n",
@@ -213,7 +186,7 @@
     "        (matrix1 / number == np.array(matrix1.matrix) / number).all()\n",
     "    ), 'div section with matrix and number is not working right'\n",
     "\n",
-    "@pytest.mark.parametrize(\"matrix1,matrix2\", [[matrix1, matrix2.T()]])    \n",
+    "@pytest.mark.parametrize(\"matrix1,matrix2\", [[matrix1, matrix2]])    \n",
     "def test_matrix_matmul_matrix(matrix1: Matrix, matrix2: Matrix):\n",
     "    assert(\n",
     "        (matrix1 @ matrix2 == np.array(matrix1.matrix) @ np.array(matrix2.matrix)).all()\n",
