add code tf-idf

--- a/Чатбот/bot.ipynb
+++ b/Чатбот/bot.ipynb
@@ -66,10 +66,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\feature_extraction\\text.py:525: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Бот: Хорошо, спасибо!\n",
+      "Бот: Нормально\n",
+      "Бот: Солнечная погода сегодня.\n",
+      "Бот: Прекрасное настроение!\n",
+      "Бот: Хорошо, спасибо!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "questions = [\"Как дела?\",\n",
+    "            \"Что делаешь?\",\n",
+    "            \"Как погода?\",\n",
+    "            \"Как настроение?\",\n",
+    "            \"Как прошёл день?\",\n",
+    "]\n",
+    "answers = [\"Хорошо, спасибо!\",\n",
+    "            \"Отвечаю на вопросы.\",\n",
+    "            \"Солнечная погода сегодня.\",\n",
+    "            \"Прекрасное настроение!\",\n",
+    "            \"Нормально\",\n",
+    "]\n",
+    "\n",
+    "vectorizer = TfidfVectorizer(tokenizer=lambda x: x.split(\" \"), preprocessor=lambda x: x, lowercase=False)\n",
+    "X = vectorizer.fit_transform(questions)\n",
+    "\n",
+    "def get_best_response(user_input):\n",
+    "    best_response_index = None\n",
+    "    Y = vectorizer.transform([user_input])\n",
+    "\n",
+    "\n",
+    "    similarities = cosine_similarity(Y, X).flatten()\n",
+    "\n",
+    "\n",
+    "    best_response_index = np.argmax(similarities)\n",
+    "    return answers[best_response_index]\n",
+    "\n",
+    "user_input = ''\n",
+    "while user_input != 'exit':\n",
+    "    user_input = input(\"Вы: \")\n",
+    "    response = get_best_response(user_input)\n",
+    "    print(\"Бот: \" + response)"
+   ]
   }
  ],
  "metadata": {
